# app/controllers/controllers_auth.go
@@ -1,6 +1,7 @@
 package controllers
 
 import (
+	"hris-datawarehouse/app/models"
 	repository "hris-datawarehouse/app/repositories"
 	"hris-datawarehouse/app/reqres"
 	"hris-datawarehouse/app/utils"
@@ -50,4 +51,52 @@ func SignIn(c echo.Context) error {
 			"expiration":   time.Now().Add(time.Hour * 72).Format("2006-01-02 15:04:05"),
 		},
 	})
+}
+
+// GetSignInUser godoc
+// @Summary Get Sign In User
+// @Description Get Sign In User
+// @Tags Auth
+// @Produce json
+// @Success 200
+// @Router /v1/auth/user [get]
+// @Security ApiKeyAuth
+// @Security JwtToken
+func GetSignInUser(c echo.Context) error {
+
+	id := c.Get("user_id").(int)
+	user, err := repository.GetUserByIDPlain(id)
+	if err != nil {
+		return c.JSON(500, utils.Respond(500, err.Error(), "Failed to get user data"))
+	}
+
+	data, err := GetSignInUserProcess(user)
+	if err != nil {
+		return c.JSON(500, utils.Respond(500, err.Error(), "failed to get user"))
+	}
+
+	return c.JSON(200, map[string]interface{}{
+		"status":  200,
+		"data":    data,
+		"message": "Success to get user data",
+	})
+}
+
+func GetSignInUserProcess(user models.GlobalUser) (data reqres.GlobalUserAuthResponse, err error) {
+	data.ID = int(user.ID)
+
+	if data.EncodedID == "" {
+		data.EncodedID = utils.EndcodeID(int(user.ID))
+	}
+	data.Fullname = user.Fullname
+	data.Avatar = user.Avatar
+	data.Email = user.Email
+
+	if user.EmailVerifiedAt.Time.IsZero() {
+		data.EmailVerified = false
+	} else {
+		data.EmailVerified = true
+	}
+
+	return
 }
